# serprog

./: .clang-format  CMakeLists.txt  README.md  serprog-protocol.txt
src/: CMakeLists.txt  FreeRTOSConfig.h  cmd.cpp  cmd.h  main.cpp  programmer.cpp  shared.h  usb.cpp
tests/: test.py
